# python-debdeploy

./: README.md  pyproject.toml
deb_deploy/: __init__.py  __main__.py
deb_deploy/tools/: check.py  create.py
debdeploy/: __init__.py  __main__.py
debdeploy/tests/: __init__.py  test_build.py  test_main.py  test_tools.py
debdeploy/tests/example/DEBIAN/: control
debdeploy/tools/: __init__.py  build.py  control.py  definitions.py  files.py  version.py
