# 
#    debdeploy - Build dpkg package and it dependencies from dpkg cache
#    Copyright (C) 2023 Kovalit31
#
#    This program is free software; you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation; either version 2 of the License, or
#    (at your option) any later version.
#
#    This program is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#

[project]
name = "debdeploy"
version = "1.2.1"
requires-python = ">=3.5"
description = "Deb package builder from dpkg cache"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Kovalit31", email = "nonecone20@gmail.com" }
]
keywords = [
    "debian",
    "debian-packages",
    "administration", 
    "linux",
    "package-manager",
    "offline",
    "system",
    "deployment"
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.5",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Software Distribution",
    "Topic :: Utilities"
]
dependencies = []

[project.urls]
repository = "https://github.com/Kovalit31/python-debdeploy"

[project.scripts]
debdeploy = "debdeploy:main"
